samples/_failures_safe/1761724393_0c84a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e965f0a9.c: In function ‘main’:
./samples/SAFE/__tmp_e965f0a9.c:150:5: error: expected declaration or statement at end of input
  150 |     printf("Testing Dijkstra's algorithm:\n");
      |     ^~~~~~
